--- a/index.html
+++ b/index.html
@@ -4,13 +4,27 @@
 <head>
     <!-- Datos que describen el documento -->
     <meta charset="UTF-8" />
-    <title>SEW</title>
-    <link rel="stylesheet" type="text/css" href="estilo.css" />
+    <title>MotoGP</title>
+    <meta name="author" content="miguel" />
+    <meta name="description" content="Página principal del proyecto MotoGP-Desktop" />
+    <meta name="keywords" content="moto, motos, motogp, motociclismo" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
 </head>
 
 <body>
     <!-- Datos con el contenidos que aparece en el navegador -->
-    <h1>Primer sitio web</h1>
-    <p>¡Hola! Este es el primer sitio web adaptable y accesible desarrollado cumpliendo los estándares HTML5 y CSS3. </p>
+    <h1>MotoGP Desktop</h1>
+    <nav>
+        <a href="index.html" title="Información de MotoGP">Inicio</a>
+        <a href="piloto.html" title="Información del piloto">Piloto</a>
+        <a href="circuito.html" title="Información del circuito">Circuito</a>
+        <a href="meteorologia.html" title="Información de meteorología">Meteorologia</a>
+        <a href="clasificaciones.html" title="Información de la clasificación">Clasificaciones</a>
+        <a href="juegos.html" title="Información de los juegos">Juegos</a>
+        <a href="ayuda.html" title="Información de ayuda">Ayuda</a>
+    </nav>
+    <h2>Página principal de MotoGP-Desktop</h2>
+    <p>En desarrollo.</p>
 </body>
 </html>
