Enlace wikipedia modificado

--- a/piloto.html
+++ b/piloto.html
@@ -68,5 +68,5 @@
             </tr>
         </tbody>
     </table>
-    <a href="https://wikipedia.com" title="Wikipedia Marc Marquez">Más información de Marc Marquez</a>
+    <a href="https://es.wikipedia.org/wiki/Brad_Binder" title="Wikipedia Brad Binder">Más información de Brad Binder</a>
 </html>
