Corregida lista de conceptos

--- a/piloto.html
+++ b/piloto.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 
 <html lang="es">
+
 <head>
     <!-- Datos que describen el documento -->
     <meta charset="UTF-8" />
@@ -8,7 +9,7 @@
     <meta name="author" content="miguel" />
     <meta name="description" content="Información del piloto del proyecto MotoGP-Desktop" />
     <meta name="keywords" content="moto, motos, motogp, motociclismo, Brad, Brad Binder" />
-    <meta name="viewport" content ="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="estilo/estilo.css" />
 </head>
 
@@ -25,7 +26,14 @@
         <a href="ayuda.html" title="Información de ayuda">Ayuda</a>
     </nav>
     <h2>Brad Binder</h2>
-    <p>Brad Binder, el talentoso piloto sudafricano de MotoGP, ha dejado una huella imborrable en el mundo del motociclismo con su estilo agresivo y su inquebrantable determinación. Conocido por su habilidad para exprimir el máximo rendimiento de su moto en las condiciones más exigentes, Binder se ha consolidado como una de las figuras más prometedoras de la parrilla. Su ascenso a la categoría reina con el equipo Red Bull KTM Factory Racing ha sido un testimonio de su arduo trabajo y dedicación, logrando victorias y podios que demuestran su potencial para competir con los mejores. Con cada carrera, Brad Binder no solo representa a su país, sino que también inspira a una nueva generación de pilotos, demostrando que con pasión y perseverancia, los sueños pueden convertirse en realidad.</p>
+    <p>Brad Binder, el talentoso piloto sudafricano de MotoGP, ha dejado una huella imborrable en el mundo del
+        motociclismo con su estilo agresivo y su inquebrantable determinación. Conocido por su habilidad para exprimir
+        el máximo rendimiento de su moto en las condiciones más exigentes, Binder se ha consolidado como una de las
+        figuras más prometedoras de la parrilla. Su ascenso a la categoría reina con el equipo Red Bull KTM Factory
+        Racing ha sido un testimonio de su arduo trabajo y dedicación, logrando victorias y podios que demuestran su
+        potencial para competir con los mejores. Con cada carrera, Brad Binder no solo representa a su país, sino que
+        también inspira a una nueva generación de pilotos, demostrando que con pasión y perseverancia, los sueños pueden
+        convertirse en realidad.</p>
     <ul>
         <li>Fecha de nacimiento: 11 de agosto de 1995</li>
         <li>Lugar de nacimiento: Potchefstroom, Sudáfrica</li>
@@ -42,10 +50,21 @@
     </ol>
     <dl>
         <dt>Chicane</dt>
-        <dd>Pole</dd>
-        <dd>Tacómetro</dd>
+        <dd>Una sección de pista con curvas cerradas, normalmente dos, en direcciones opuestas que se usa para reducir la
+            velocidad de los vehículos por motivos de seguridad o para añadir un desafío técnico a una parte de la pista que
+            de otro modo sería una larga recta.</dd>
+        <dt>Pole</dt>
+        <dd>Abreviatura de "Pole position". Es la primera posición en la parrilla de salida de una carrera, lograda por el
+            piloto que establece el tiempo más rápido en la sesión de clasificación.</dd>
+        <dt>Tacómetro</dt>
+        <dd>Instrumento ubicado en el salpicadero o panel de instrumentos de la moto que mide y muestra las revoluciones por
+            minuto (RPM) del motor.</dd>
         <dt>Control de tracción</dt>
-        <dd>Frenos</dd>
+        <dd>Un sistema electrónico diseñado para prevenir que el neumático trasero patine al acelerar, especialmente en
+            condiciones de baja adherencia, gestionando la potencia entregada a la rueda.</dd>
+        <dt>Frenos</dt>
+        <dd>Sistema esencial compuesto por discos, pinzas y pastillas (generalmente de carbono o acero en competición) que
+            se utiliza para reducir la velocidad o detener la motocicleta.</dd>
     </dl>
     <table>
         <caption>Resultados del piloto Brad Binder en la temporada 2024</caption>
@@ -69,4 +88,6 @@
         </tbody>
     </table>
     <a href="https://es.wikipedia.org/wiki/Brad_Binder" title="Wikipedia Brad Binder">Más información de Brad Binder</a>
+</body>
+
 </html>
